[project]
dependencies = [
    "requests ~= 2.31",
    "requests-oauthlib ~= 1.3",
    "snakemake-interface-common ~= 1.14",
    "snakemake-interface-storage-plugins ~= 3.0",
    "snakemake-storage-plugin-http ~= 0.2",
    "sysrsync ~= 1.1",
]
name = "snakemake-storage-plugin-cached-http"
version = "0.0.1"
description = "Snakemake storage plugin for downloading input files from HTTP(s)."
authors = [
    { name = "Jonas Hörsch", email = "jonas.hoersch@openenergytransition.org" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["snakemake", "plugin", "storage", "http", "https", "cache"]
requires-python = "~=3.11"

[project.urls]
homepage = "https://github.com/coroa/snakemake-storage-plugin-cached-http"
repository = "https://github.com/coroa/snakemake-storage-plugin-cached-http.git"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/cached-http.html"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
coverage = { extras = ["toml"], version = "^7.3.2" }
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest = "^7.0"
snakemake = { git = "https://github.com/snakemake/snakemake.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
